# nfx

./: README.md  README.rst  notes.md  pyproject.toml
netflix/: cli.py  collections.py  page.py  query.py
tests/: test_expiring.py  test_new.py  test_query.py  test_search.py
